Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-20 (SVN):
    * screen.c, gl_screen.c (UpdateInfoMessage): Changed newmessage to be
      const. Replaced strcat by q_strlcpy to be on the safe side.

2011-12-20 (SVN):
    * screen.c, gl_screen.c: Whitespace tidy up. Removed extra parentheses
      from a few places where they aren't necessary at all.

2011-12-20 (SVN):
    * cmd.c (Cmd_Alias_f): Replaced a strcat by q_strlcat (was a typo.)
    * hexenworld, CL_Disconnect(): Adjusted buffer pointer.
    * quakedef.h: updated beta date stamp to 2011-12-20.

2011-12-18 (SVN):
    * in_svgalib.c: Added missing cameramode and idealroll handling to the
      mouse code.

2011-12-18 (SVN):
    * quakeinc.h, qwsvinc.h: Tweaked order of engine header includes.
    * net_win.c, net_dos.c: Fixed a typo in #endif comments.
    * quakedef.h: updated beta date stamp to 2011-12-18.

2011-12-17 (SVN):
    * Added AUTHORS file among the documents listing all of our contributors
      to the best of my knowledge.  Edited the ABOUT and README documents a
      little.

2011-12-16 (SVN):
    * in_sdl.c: Explicitly disable SDL's unicode translation support during
      initialization and enable it only for text input during frame updates.
      This allows for the use of dead keys on the console or in chat, while
      the in-game key bindings are not stuck just because of them. Based on
      a patch from, and thanks to Sander van Dijk.

2011-12-16 (SVN):
    * in_sdl.c (IN_ActivateMouse): Nuke events from when mouse was disabled
      by calling SDL_PumpEvents() and SDL_GetRelativeMouseState().
    * Updated the release notes file for v1.5.2.
    * quakedef.h: updated beta date stamp to 2011-12-16.

2011-12-15 (SVN):
    * menu.c (M_ToggleMenu_f): Set key_dest to key_game only if the client
      is connected. Set it to key_console, otherwise. This allows dead keys
      to work properly under fullscreen console mode. Patch from and thanks