@@ -241,7 +241,7 @@ static void SCR_EraseCenterString (void)
 
 static void SCR_DrawCenterString (void)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -253,8 +253,9 @@ static void SCR_DrawCenterString (void)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &scr_centerstring[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &scr_centerstring[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
@@ -959,7 +960,7 @@ static void Plaque_Draw (void)
 
 static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -978,8 +979,9 @@ static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &message[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &message[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
@@ -987,7 +989,7 @@ static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 
 static void Info_Plaque_Draw (const char *message)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -1012,8 +1014,9 @@ static void Info_Plaque_Draw (const char *message)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &message[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &message[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
@@ -1021,7 +1024,7 @@ static void Info_Plaque_Draw (const char *message)
 
 static void Bottom_Plaque_Draw (const char *message)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -1037,8 +1040,9 @@ static void Bottom_Plaque_Draw (const char *message)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &message[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &message[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print(bx, by, temp);
 	}
